fix: eo-editor default height is too high
将api-script之外的eo-editor设置maxLines最大为10

--- a/src/workbench/browser/src/app/eoui/editor/eo-editor/eo-editor.component.scss
+++ b/src/workbench/browser/src/app/eoui/editor/eo-editor/eo-editor.component.scss
@@ -1,5 +1,5 @@
 .eo-editor {
-  min-height: var(--eo-editor-height, 200px);
+  min-height: var(--eo-editor-height, 70px);
 }
 
 .button_list {
